--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,6 @@ jobs:
 
       - name: Apply Kubernetes manifests
         run: |
-          kubectl apply -f deployment.yaml
-          kubectl apply -f hpa.yaml
-          kubectl apply -f service.yaml
+          kubectl apply -f deployment.yaml --validate=false
+          kubectl apply -f hpa.yaml --validate=false
+          kubectl apply -f service.yaml --validate=false
