fix ci/cd pipeline

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,6 @@ jobs:
 
       - name: Apply Kubernetes manifests
         run: |
-          KUBECONFIG=$HOME/.kube/config kubectl apply -f deployment.yaml --validate=false
-          KUBECONFIG=$HOME/.kube/config kubectl apply -f hpa.yaml --validate=false
-          KUBECONFIG=$HOME/.kube/config kubectl apply -f service.yaml --validate=false
+          kubectl apply -f deployment.yaml --validate=false
+          kubectl apply -f hpa.yaml --validate=false
+          kubectl apply -f service.yaml --validate=false
